--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           .audio-img {
             width: 85%;
             display: block;
-            margin: -1rem 0 -0.5rem 1rem;
+            margin: -1rem 0 0.35rem 1rem;
           }
           .volume {
             width: 100%;
@@ -76,7 +76,7 @@
             text-decoration: none;
             display: flex;
             align-items: center;
-            column-gap: 0.25rem;
+            column-gap: 0.35rem;
             cursor: pointer;
           }
           h2 {
@@ -88,6 +88,7 @@
             display: flex;
             flex-direction: column;
             row-gap: 1.5rem;
+            margin-bottom: 0.75rem;
           }
           .duration {
             width: 100%;
@@ -256,8 +257,8 @@
             .volume {
               width: 50%;
               position: absolute;
-              top: 52%;
-              left: 35%;
+              top: 58%;
+              left: 49%;
               z-index: 3;
             }
             .audio-info {
@@ -267,6 +268,7 @@
             }
             .audio-controls {
               row-gap: 2rem;
+              margin-bottom: 0.5rem;
             }
             .btn-play {
               margin: 0 auto 0 0;
@@ -290,7 +292,7 @@
               <h2 class="track-title"><slot name="track-title"></slot></h2>
             </div>
             <div class="audio-controls">
-              <audio src="https://github.com/rileydevdzn/audio-player-web-component/blob/main/penguinmusic-modern-chillout-future-calm-12641.mp3?raw=true" preload="metadata"></audio>
+              <audio src="" preload="metadata"></audio>
               <button class="btn-play" id="play-icon"></button>
               <div class="duration">
                 <span class="time" id="current-time">0:00</span>
