Update track info

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Audio Player v3</title>
+    <title>Audio Player</title>
     <link rel="stylesheet" href="./style.css">
   </head>
 
@@ -21,9 +21,9 @@
         </div>
         <div class="audio-player">
           <div class="audio-track-info">
-            <h2 class="track-title">Track title</h2>
+            <h2 class="track-title">Modern Chillout</h2>
             <div class="artist-info">
-              <p class="artist-name">Artist name</p>
+              <p class="artist-name">penguinMusic</p>
               <a class="artist-link" href="https://pixabay.com/users/penguinmusic-24940186/">Artist<img class="external-link" src="./external-link.svg" alt="Hear more from this artist"/></a>
             </div>
           </div>
